--- a/src/components/Layout/NavBar/NavBar.module.scss
+++ b/src/components/Layout/NavBar/NavBar.module.scss
@@ -1,4 +1,4 @@
-.Header {
+.root {
     width: 100%;
     height: 4rem;
     display: flex;
@@ -35,28 +35,27 @@
         background-position: 0 0;
         background-size: 268% 100%;
     }
-}
 
-.Nav {
-    background-color: white;
-    max-width: 1432px;
-    width: 100%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1rem;
-    height: 100%;
-
-    & ul {
+    & nav {
+        background-color: white;
+        max-width: 1432px;
+        width: 100%;
+        margin: auto;
         display: flex;
         align-items: center;
+        justify-content: space-between;
+        padding: 0 1rem;
         height: 100%;
-    }
 
-    & li a {
-        font-weight: 500;
-        height: 100%;
-        color: #2e425a;
+        & ul {
+            display: flex;
+            align-items: center;
+        }
+
+        & li a {
+            font-weight: 500;
+            height: 100%;
+            color: #2e425a;
+        }
     }
 }
