--- a/src/components/Products/ProductCard/ProductCard.module.scss
+++ b/src/components/Products/ProductCard/ProductCard.module.scss
@@ -1,4 +1,4 @@
-.ProductCard {
+.root {
     max-width: 15rem;
     width: 100%;
     height: 100%;
@@ -25,33 +25,33 @@
         flex-grow: 0.6;
         padding-top: 0.3rem;
     }
-}
 
-.Content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-    padding-top: 0.25rem;
+    & div {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1rem;
+        padding-top: 0.25rem;
 
-    & p {
-        font-size: 1.1rem;
-        font-weight: bold;
-        color: #172f4e;
-        padding: 0;
-    }
+        & p {
+            font-size: 1.1rem;
+            font-weight: bold;
+            color: #172f4e;
+            padding: 0;
+        }
 
-    & button {
-        border: none;
-        background-color: transparent;
-        font-size: 0.85rem;
-        font-weight: 500;
-        padding: 0.3rem 0.8rem;
-        color: #2d86ff;
-        border-radius: 4px;
+        & button {
+            border: none;
+            background-color: transparent;
+            font-size: 0.85rem;
+            font-weight: 500;
+            padding: 0.3rem 0.8rem;
+            color: #2d86ff;
+            border-radius: 4px;
 
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.056);
+            &:hover {
+                background-color: rgba(0, 0, 0, 0.056);
+            }
         }
     }
 }
