Up new hook + finished search component

--- a/src/components/Layout/NavBar/NavBar.module.scss
+++ b/src/components/Layout/NavBar/NavBar.module.scss
@@ -5,7 +5,7 @@
     flex-flow: column;
     padding-top: 2px;
 
-    & li {
+    & > li {
         margin-left: 1.5rem;
 
         &:first-of-type {
