--- a/src/components/Products/ProductCard/ProductCard.module.scss
+++ b/src/components/Products/ProductCard/ProductCard.module.scss
@@ -1,11 +1,13 @@
 .root {
-    max-width: 15rem;
-    width: 100%;
-    height: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
-    display: inline-block;
-    margin: 0.3rem;
+    width: 15rem;
+    border-radius: 8px;
+    position: relative;
+
+    &:hover {
+        &:hover {
+            background-color: #eef5f8;
+        }
+    }
 
     & a {
         padding: 1rem 1rem 0rem;
@@ -48,10 +50,6 @@
             padding: 0.3rem 0.8rem;
             color: #2d86ff;
             border-radius: 4px;
-
-            &:hover {
-                background-color: rgba(0, 0, 0, 0.056);
-            }
         }
     }
 }
