--- a/src/components/UI/Search/SearchInput.module.scss
+++ b/src/components/UI/Search/SearchInput.module.scss
@@ -2,26 +2,36 @@
     display: flex;
     align-items: center;
     position: relative;
-    padding: 1rem;
+    max-width: 20rem;
+    width: 100%;
 
-    & svg {
+    & svg:first-of-type {
         font-weight: 500;
         font-size: 1.25rem;
         margin-right: 0.25rem;
         color: #2e425a;
+        position: absolute;
+        left: 0.5rem;
     }
-
     & input {
         font-weight: 500;
         font-size: 1rem;
         border: none;
         outline: none;
         color: #2e425a;
+        padding: 0.5rem 0 0.5rem 2rem;
+        border-radius: 4px;
+        max-width: 20rem;
+        width: 100%;
 
         &::placeholder {
             color: #2e425a;
             opacity: 0.8;
             font-weight: 500;
+        }
+
+        &:focus {
+            background-color: #eef5f8;
         }
     }
 
@@ -91,10 +101,5 @@
         & a {
             font-size: 0.8rem;
         }
-    }
-
-    .root input {
-        font-size: 0.9rem;
-        max-width: 13rem;
     }
 }
