--- a/src/components/UI/Search/SearchInput.module.scss
+++ b/src/components/UI/Search/SearchInput.module.scss
@@ -4,6 +4,7 @@
     position: relative;
     max-width: 20rem;
     width: 100%;
+    z-index: 100;
 
     & svg:first-of-type {
         font-weight: 500;
