--- a/src/components/Products/ProductList/ProductList.module.scss
+++ b/src/components/Products/ProductList/ProductList.module.scss
@@ -1,4 +1,6 @@
 .root {
+    grid-area: products;
+
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
