--- a/src/components/Products/ProductCard/ProductCard.module.scss
+++ b/src/components/Products/ProductCard/ProductCard.module.scss
@@ -47,7 +47,7 @@
             background-color: transparent;
             font-size: 0.85rem;
             font-weight: 500;
-            padding: 0.3rem 0.8rem;
+            padding: 0rem;
             color: #2d86ff;
             border-radius: 4px;
         }
