--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -1,4 +1,8 @@
 .root {
     display: grid;
     grid-template-columns: 220px auto;
+
+    grid-template-areas:
+        'filters products'
+        'filters pagination';
 }
