--- a/src/components/Products/ImageSlider/ImageSlider.module.scss
+++ b/src/components/Products/ImageSlider/ImageSlider.module.scss
@@ -2,20 +2,73 @@
     display: flex;
     overflow: hidden;
     max-width: 35rem;
-    max-height: 25rem;
+    max-height: 27.5rem;
     width: 100%;
     height: 100%;
 
     & > li {
         width: 100%;
         height: 100%;
-        transition: 1s;
+        transition: 0.7s;
 
         & > img {
             object-fit: cover;
             display: block;
             height: 100%;
             width: 35rem;
+        }
+    }
+}
+
+.small {
+    display: flex;
+    max-width: 35rem;
+    width: 100%;
+
+    & > li {
+        max-width: 5rem;
+        border-radius: 4px;
+        border: 1px solid transparent;
+
+        & > img {
+            display: block;
+            width: 100%;
+            border-radius: 4px;
+        }
+    }
+
+    .active {
+        border-color: #2e425a;
+    }
+}
+
+.mobile {
+    max-width: 35rem;
+    width: 100%;
+    margin: auto;
+
+    & > img {
+        display: block;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 1100px) {
+    .root {
+        max-width: 30rem;
+        max-height: 20rem;
+
+        & > li > img {
+            max-width: 30rem;
+            max-height: 20rem;
+        }
+    }
+    .small {
+        max-width: 30rem;
+
+        & > li {
+            max-width: 5rem;
         }
     }
 }
