--- a/src/components/Products/ImageSlider/ImageSlider.module.scss
+++ b/src/components/Products/ImageSlider/ImageSlider.module.scss
@@ -9,7 +9,7 @@
     & > li {
         width: 100%;
         height: 100%;
-        transition: 0.7s;
+        transition: 700ms;
 
         & > img {
             object-fit: cover;
@@ -24,21 +24,27 @@
     display: flex;
     max-width: 35rem;
     width: 100%;
+    margin-top: 0.25rem;
 
     & > li {
-        max-width: 5rem;
+        max-width: 7rem;
+        padding: 0.25rem;
+        margin: 0.2rem;
         border-radius: 4px;
-        border: 1px solid transparent;
+        cursor: pointer;
+        opacity: 0.5;
+        transition: 400ms;
+
+        &:hover,
+        &.active {
+            opacity: 1;
+        }
 
         & > img {
             display: block;
             width: 100%;
             border-radius: 4px;
         }
-    }
-
-    .active {
-        border-color: #2e425a;
     }
 }
 
@@ -66,9 +72,5 @@
     }
     .small {
         max-width: 30rem;
-
-        & > li {
-            max-width: 5rem;
-        }
     }
 }
