--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,6 +1,12 @@
 .root {
     max-width: 1432px;
-    padding: 1rem;
+    padding: 1rem 3.5rem;
     width: 100%;
     margin: auto;
+}
+
+@media (max-width: 950px) {
+    .root {
+        padding: 1rem 1rem;
+    }
 }
