--- a/src/components/Layout/NavBar/NavBar.module.scss
+++ b/src/components/Layout/NavBar/NavBar.module.scss
@@ -66,7 +66,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 1rem;
+        padding: 0 3rem 0 3.5rem;
         height: 100%;
 
         & ul {
@@ -78,6 +78,14 @@
             font-weight: 500;
             height: 100%;
             color: #2e425a;
+        }
+    }
+}
+
+@media (max-width: 950px) {
+    .root {
+        & nav {
+            padding: 0 0.5rem 0 1rem;
         }
     }
 }
