--- a/src/components/Products/ProductCard/ProductCard.module.scss
+++ b/src/components/Products/ProductCard/ProductCard.module.scss
@@ -2,10 +2,12 @@
     width: 15rem;
     border-radius: 8px;
     position: relative;
+    border: 2px solid transparent;
 
     &:hover {
         &:hover {
-            background-color: #eef5f8;
+            border: 2px solid #e3f4fd;
+            background-color: #f7fcff;
         }
     }
 
