--- a/src/components/Products/ProductSidebar/ProductSidebar.module.scss
+++ b/src/components/Products/ProductSidebar/ProductSidebar.module.scss
@@ -1,2 +1,125 @@
 .root {
+    & .price {
+        padding: 2rem 6rem;
+        border: 2px solid #e3f4fd;
+        background-color: #f7fcff;
+        border-radius: 4px;
+
+        & > p {
+            font-size: 2.2rem;
+            font-weight: 700;
+            color: #2e425a;
+        }
+    }
+
+    & .shipping {
+        border-left: 2px solid #e3f4fd;
+        border-right: 2px solid #e3f4fd;
+
+        background-color: #f7fcff;
+        padding: 2rem 1.75rem;
+        display: grid;
+        grid-template-columns: 2.5rem auto;
+        grid-template-areas: 'check  heading' 'check sub';
+
+        & svg {
+            color: #5dbf39;
+            font-size: 2rem;
+
+            grid-area: check;
+        }
+
+        & span:first-of-type {
+            color: #5dbf39;
+            font-weight: 500;
+
+            grid-area: heading;
+        }
+
+        & span:last-of-type {
+            font-size: 0.75rem;
+            color: #5b5f61;
+            grid-area: sub;
+        }
+    }
+    & .action {
+        border: 2px solid #e3f4fd;
+        background-color: #f7fcff;
+        padding: 1.5rem;
+
+        & > div {
+            margin-bottom: 1rem;
+            color: #2e425a;
+            display: flex;
+
+            & span:first-of-type {
+                font-size: 0.9rem;
+                font-weight: 500;
+            }
+
+            & span:last-of-type {
+                // font-size: 0.9rem;
+                font-weight: 500;
+            }
+
+            & > button {
+                border: none;
+                background-color: transparent;
+                color: #2e425a;
+
+                &:disabled {
+                    opacity: 0.5;
+                }
+
+                & svg {
+                    font-size: 1rem;
+                }
+            }
+        }
+
+        & > button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            padding: 0.9rem;
+            background-color: #2d86ff;
+            font-weight: 600;
+            color: white;
+            font-size: 1rem;
+            border: none;
+            border-radius: 4px;
+
+            & svg {
+                font-size: 1.2rem;
+                margin-right: 0.25rem;
+            }
+
+            &:hover {
+                background-color: darken($color: #2d86ff, $amount: 2);
+            }
+        }
+    }
+}
+
+@media (max-width: 800px) {
+    .root {
+        margin-top: 2rem;
+        width: 80%;
+
+        & .price {
+            text-align: center;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .root {
+        margin-top: 2rem;
+        width: 90%;
+
+        & .price p {
+            font-size: 1.8rem;
+        }
+    }
 }
