--- a/src/components/UI/DropDown/DropDown.module.scss
+++ b/src/components/UI/DropDown/DropDown.module.scss
@@ -27,7 +27,6 @@
 
     & ul {
         min-width: 100%;
-        background-color: rgb(255, 255, 255);
         position: absolute;
         height: auto;
         top: 90%;
@@ -35,7 +34,8 @@
         display: flex;
         flex-flow: column;
         z-index: 1000;
-        border: 1px solid rgba(0, 0, 0, 0.1);
+        border: 2px solid #e3f4fd;
+        background-color: #f7fcff;
         z-index: 10;
         border-radius: 4px;
         padding: 0.5rem;
