--- a/src/components/UI/Search/NotFound/NotFound.module.scss
+++ b/src/components/UI/Search/NotFound/NotFound.module.scss
@@ -1,9 +1,9 @@
 .root {
-    width: 18rem;
+    width: 100%;
     height: 3rem;
-    border: 1px solid rgba(0, 0, 0, 0.1);
     margin: 0;
-    background-color: white;
+    border: 1px solid #e3f4fd;
+    background-color: #f7fcff;
     border-radius: 4px;
     display: flex;
     justify-content: center;
