--- a/src/components/UI/Search/SearchResult/SearchResult.module.scss
+++ b/src/components/UI/Search/SearchResult/SearchResult.module.scss
@@ -1,9 +1,9 @@
 .root {
     width: 20rem;
     height: 8rem;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid #e3f4fd;
+    background-color: #f7fcff;
     margin: 0;
-    background-color: white;
     border-radius: 4px;
 
     & a {
