--- a/src/components/Layout/SideDrawer/SideDrawer.module.scss
+++ b/src/components/Layout/SideDrawer/SideDrawer.module.scss
@@ -8,6 +8,7 @@
     background-color: white;
     padding: 1rem;
     transition: 0.2s;
+    z-index: 300;
 
     & > button {
         font-size: 1.4rem;
