[UPDATE] Case Product info table

--- a/src/components/Products/ProductTable/index.module.scss
+++ b/src/components/Products/ProductTable/index.module.scss
@@ -5,6 +5,7 @@
     text-align: left;
     border-collapse: collapse;
     table-layout: auto;
+    margin-bottom: 2rem;
 
     & tr {
         border: 1px solid #e3f4fd;
