--- a/src/components/Products/ProductTable/index.module.scss
+++ b/src/components/Products/ProductTable/index.module.scss
@@ -32,6 +32,10 @@
         font-weight: 700;
         font-size: 0.8rem;
     }
+
+    & svg {
+        font-size: 1.2rem;
+    }
 }
 
 @media (max-width: 1100px) {
