--- a/src/components/Products/ProductTable/index.module.scss
+++ b/src/components/Products/ProductTable/index.module.scss
@@ -1,19 +1,21 @@
 .root {
     width: 100%;
     border: 1px solid #e3f4fd;
-    border-radius: 4px;
     text-align: left;
     border-collapse: collapse;
     table-layout: auto;
     margin-bottom: 4rem;
+    border-radius: 4px;
+    border-style: hidden;
+    box-shadow: 0 0 0 1px #e3f4fd;
 
     & tr {
-        border: 1px solid #e3f4fd;
+        box-shadow: 0 0 0 1px #e3f4fd;
     }
 
     & tr:nth-child(odd) {
         background-color: #f7fcff;
-        border: 1px solid #e3f4fd;
+        box-shadow: 0 0 0 1px #e3f4fd;
     }
 
     & th,
@@ -51,6 +53,8 @@
         }
 
         & th {
+            white-space: nowrap;
+
             position: absolute;
             left: 1rem;
         }
