--- a/src/components/Products/ProductFilters/Filter/Filter.module.scss
+++ b/src/components/Products/ProductFilters/Filter/Filter.module.scss
@@ -1,13 +1,39 @@
 .root {
-    padding: 0.5rem;
+    padding: 0.75rem 0.5rem 0.4rem 1rem;
+    border: 2px solid #e3f4fd;
+    background-color: #f7fcff;
+    border-radius: 4px;
 
-    & > p {
-        color: #2e425a;
-        font-size: 0.9rem;
-        font-weight: 500;
+    & > div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 0.25rem;
+
+        & > p {
+            color: #2e425a;
+            font-size: 0.9rem;
+            font-weight: 500;
+        }
+
+        & > button {
+            border: none;
+            padding: 0 0.5rem;
+            margin: 0;
+            background-color: transparent;
+
+            & > svg {
+                color: #2e425a;
+                margin-top: 0.1rem;
+                transition: 100ms;
+                font-size: 1rem;
+            }
+        }
     }
 
     & > ul {
+        transition: 1s;
+        margin: 0;
         margin-left: 0.75rem;
         padding: 0.25rem;
 
