--- a/src/components/Products/ProductTable/index.module.scss
+++ b/src/components/Products/ProductTable/index.module.scss
@@ -7,10 +7,10 @@
     margin-bottom: 4rem;
     border-radius: 4px;
     border-style: hidden;
-    box-shadow: 0 0 0 1px #e3f4fd;
+    box-shadow: 0 0 0 2px #e3f4fd;
 
     & tr {
-        box-shadow: 0 0 0 1px #e3f4fd;
+        border: 1px solid #e3f4fd;
     }
 
     & tr:nth-child(odd) {
@@ -31,7 +31,7 @@
     }
 
     & td {
-        font-weight: 700;
+        font-weight: 400;
         font-size: 0.8rem;
     }
 
@@ -40,9 +40,9 @@
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1400px) {
     .root th {
-        width: 20%;
+        width: 22.5%;
     }
 }
 
