--- a/src/components/Products/SimilarProductsSlider/SimilarProductsSlider.module.scss
+++ b/src/components/Products/SimilarProductsSlider/SimilarProductsSlider.module.scss
@@ -20,6 +20,7 @@
         position: absolute;
         top: 0;
         bottom: 0;
+        padding: 0;
 
         &:first-of-type {
             left: 0;
