--- a/src/pages/Products/index.module.scss
+++ b/src/pages/Products/index.module.scss
@@ -1,6 +1,7 @@
 .root {
     display: grid;
     grid-template-columns: 220px auto;
+    column-gap: 0.5rem;
 
     grid-template-areas:
         'filters products'
