--- a/src/components/UI/ErrorCard/ErrorCard.module.scss
+++ b/src/components/UI/ErrorCard/ErrorCard.module.scss
@@ -4,6 +4,21 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-left: 4px solid red;
     margin: auto;
+    position: relative;
+
+    & > button {
+        position: absolute;
+        right: 0;
+        top: 0;
+        background-color: transparent;
+        border: none;
+        padding: 0.75rem;
+
+        & > svg {
+            color: rgba(0, 0, 0, 0.6) !important;
+            font-size: 1rem;
+        }
+    }
 
     & > h3 {
         margin-bottom: 0.75rem;
