[UPDATE] logout hook

--- a/src/components/UI/DropDown/DropDown.module.scss
+++ b/src/components/UI/DropDown/DropDown.module.scss
@@ -52,7 +52,7 @@
                 font-weight: 500;
                 padding: 0.5rem 0.75rem;
                 height: 100%;
-                color: #2e425a;
+                color: #2e425a !important;
             }
         }
     }
