--- a/src/components/Layout/NavBar/NavBar.module.scss
+++ b/src/components/Layout/NavBar/NavBar.module.scss
@@ -56,15 +56,15 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 3rem 0 3.5rem;
+        padding: 0 3rem 0 4rem;
         height: 100%;
 
-        & ul {
+        & > ul {
             display: flex;
             align-items: center;
         }
 
-        & li a {
+        & > ul > li > a {
             font-weight: 500;
             height: 100%;
             color: #2e425a;
@@ -91,6 +91,14 @@
     }
 }
 
+.cartContainer {
+    margin-right: 0.5rem;
+
+    & > a > svg {
+        font-size: 1.2rem;
+    }
+}
+
 .cart {
     position: relative;
     &::after {
@@ -104,4 +112,8 @@
         bottom: 70%;
         left: 70%;
     }
+}
+
+.signIn {
+    padding: 1rem;
 }
