--- a/src/components/UI/Search/SearchInput.module.scss
+++ b/src/components/UI/Search/SearchInput.module.scss
@@ -65,6 +65,9 @@
         align-items: center;
         justify-content: center;
         font-size: 0.9rem;
+        font-weight: 500;
+        height: 100%;
+        color: #2e425a;
     }
 }
 
