--- a/src/components/UI/Search/SearchResult/SearchResult.module.scss
+++ b/src/components/UI/Search/SearchResult/SearchResult.module.scss
@@ -10,6 +10,9 @@
         display: flex;
         justify-content: space-between;
         padding: 0.5rem;
+        font-weight: 500;
+        height: 100%;
+        color: #2e425a;
     }
 
     & div {
