--- a/src/components/Layout/NavBar/NavBar.module.scss
+++ b/src/components/Layout/NavBar/NavBar.module.scss
@@ -4,7 +4,9 @@
     display: flex;
     flex-flow: column;
     padding-top: 2px;
-    z-index: 200;
+    z-index: 700;
+    background-color: white;
+    position: fixed;
 
     & > li {
         margin-left: 1.5rem;
@@ -101,15 +103,19 @@
 
 .cart {
     position: relative;
-    &::after {
-        content: '';
+    & > span {
         position: absolute;
-        width: 10px;
-        height: 10px;
+        text-align: center;
+        padding-top: 0.15rem;
+        padding-left: 0.03rem;
+        width: 1rem;
+        height: 1rem;
         border-radius: 50%;
         background-color: red;
+        color: white;
+        font-size: 0.65rem;
         display: block;
-        bottom: 70%;
+        bottom: 65%;
         left: 70%;
     }
 }
