--- a/src/components/Layout/SideDrawer/SideDrawer.module.scss
+++ b/src/components/Layout/SideDrawer/SideDrawer.module.scss
@@ -1,23 +1,86 @@
 .root {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     max-width: 20rem;
     width: 80%;
     height: 100%;
-    background-color: white;
+    border: 2px solid #e3f4fd;
+    background-color: #f7fcff;
     padding: 1rem;
     transition: 0.2s;
-    z-index: 300;
+    z-index: 1000;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 
     & > button {
         font-size: 1.4rem;
         float: right;
         background-color: transparent;
         border: none;
+        padding: 0;
 
         & > svg {
             color: #2e425a;
+        }
+    }
+
+    & > label {
+        color: #2e425a;
+        font-weight: 500;
+        font-size: 0.8rem;
+        display: block;
+        margin-bottom: 0.25rem;
+
+        &:first-of-type {
+            margin-top: 2rem;
+        }
+    }
+
+    & > ul {
+        border: 2px solid #d6e9f3;
+        background-color: #f7fcff;
+        border-radius: 4px;
+        margin-bottom: 1rem;
+
+        & > li {
+            flex-grow: 1;
+            height: min-content;
+            margin: 0;
+            width: 100%;
+            color: #2e425a;
+            white-space: nowrap;
+            position: relative;
+            border-radius: 4px;
+
+            &:hover {
+                background-color: #e3f4fd;
+            }
+
+            &:first-of-type {
+                padding-top: 0.15rem;
+            }
+
+            &:last-of-type {
+                padding-bottom: 0.15rem;
+            }
+
+            & > * {
+                padding: 0.6rem 1.25rem;
+                height: 100%;
+                font-size: 0.9rem;
+                color: #2e425a;
+                font-weight: 500;
+            }
+
+            & > button {
+                border: none;
+                font-weight: 500;
+                background-color: transparent;
+                display: flex;
+                align-items: center;
+                color: #2e425a;
+            }
         }
     }
 }
