[UPDATE] responsive css

--- a/src/components/Products/ProductCard/ProductCard.module.scss
+++ b/src/components/Products/ProductCard/ProductCard.module.scss
@@ -37,9 +37,7 @@
         padding: 1rem;
         padding-top: 0.25rem;
 
-        & p {
-            font-size: 1.1rem;
-            font-weight: bold;
+        & h3 {
             color: #172f4e;
             padding: 0;
         }
