--- a/src/components/Layout/SideDrawer/SideDrawer.module.scss
+++ b/src/components/Layout/SideDrawer/SideDrawer.module.scss
@@ -6,23 +6,34 @@
     width: 80%;
     height: 100%;
     border: 2px solid #e3f4fd;
-    background-color: #f7fcff;
+    background-color: white;
     padding: 1rem;
     transition: 0.2s;
     z-index: 1000;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 
+    & > a {
+        font-weight: 700;
+        text-decoration: none;
+        color: #2e425a;
+        font-size: 1.2rem;
+    }
+
     & > button {
         font-size: 1.4rem;
-        float: right;
         background-color: transparent;
+        float: right;
         border: none;
         padding: 0;
 
         & > svg {
             color: #2e425a;
         }
+    }
+
+    & > h3 {
+        color: #2e425a;
     }
 
     & > label {
@@ -33,7 +44,7 @@
         margin-bottom: 0.25rem;
 
         &:first-of-type {
-            margin-top: 2rem;
+            margin-top: 1.5rem;
         }
     }
 
@@ -42,6 +53,10 @@
         background-color: #f7fcff;
         border-radius: 4px;
         margin-bottom: 1rem;
+
+        &:last-of-type {
+            margin: 0;
+        }
 
         & > li {
             flex-grow: 1;
@@ -87,4 +102,10 @@
 
 .open {
     transform: translate(-100%);
+}
+
+@media (max-height: 655px) {
+    .root {
+        overflow-x: scroll;
+    }
 }
