--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -16,8 +16,9 @@
 }
 
 .label {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 500;
     color: #9ea9b7;
     display: block;
+    margin-bottom: 0.1rem;
 }
