--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -22,3 +22,9 @@
     display: block;
     margin-bottom: 0.1rem;
 }
+
+.error {
+    font-size: 0.8rem;
+    color: red;
+    margin-top: 0.1rem;
+}
