--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -6,6 +6,8 @@
     grid-template-areas:
         'filters products'
         'filters pagination';
+
+    margin-bottom: 1rem;
 }
 
 @media (max-width: 800px) {
