--- a/src/components/Products/ProductCard/MobileProductCart/MobileProductCard.module.scss
+++ b/src/components/Products/ProductCard/MobileProductCart/MobileProductCard.module.scss
@@ -1,6 +1,6 @@
 .root {
     width: 100%;
-    height: 10rem;
+    height: 8rem;
     border: 1px solid #e3f4fd;
     background-color: #f7fcff;
     margin: 0;
@@ -13,15 +13,15 @@
         height: 100%;
 
         & > img {
-            max-width: 45%;
-            max-height: 90%;
+            max-width: 40%;
+            max-height: 7rem;
             object-fit: cover;
         }
 
         & > div {
             display: flex;
             flex-flow: column;
-            justify-content: space-between;
+            justify-content: flex-end;
             padding: 0.5rem;
             flex-grow: 1;
             height: 100%;
@@ -29,6 +29,7 @@
             & > p {
                 font-weight: 500;
                 color: #2d86ff;
+                flex-grow: 0.9;
             }
 
             & > h3 {
@@ -37,5 +38,11 @@
                 margin-right: 0.2rem;
             }
         }
+    }
+}
+
+@media (max-width: 400px) {
+    .root p {
+        font-size: 0.9rem;
     }
 }
