[UPDATE] similar products carousel + components

--- a/src/components/Products/SimilarProductsSlider/SimilarProductsSlider.module.scss
+++ b/src/components/Products/SimilarProductsSlider/SimilarProductsSlider.module.scss
@@ -12,6 +12,7 @@
         padding: 1rem 1rem 0.5rem 1rem;
         flex-wrap: nowrap;
         width: max-content;
+        transition: 300ms;
     }
 
     & > button {
