--- a/src/index.scss
+++ b/src/index.scss
@@ -52,3 +52,19 @@ button {
     background-color: transparent;
     border: none;
 }
+
+.StripeElement {
+    border: 1px solid #c8dce6;
+    border-radius: 4px;
+    padding: 0.6rem;
+
+    &--focus {
+        border-color: #6ea7ec;
+        box-shadow: 0 0 0 1px #6ea7ec;
+    }
+
+    &--invalid {
+        border-color: red;
+        box-shadow: 0 0 0 0;
+    }
+}
