--- a/src/components/Checkout/CheckoutForm/CheckoutForm.module.scss
+++ b/src/components/Checkout/CheckoutForm/CheckoutForm.module.scss
@@ -1,4 +1,10 @@
 .root {
+    grid-area: checkout-form;
+    border: 2px solid #e3f4fd;
+    background-color: #f7fcff;
+    padding: 2rem;
+    border-radius: 4px;
+
     & > label {
         font-size: 0.8rem;
         font-weight: 500;
