--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -1,2 +1,82 @@
 .root {
+    display: grid;
+    grid-template-columns: auto 23rem;
+    column-gap: 3rem;
+
+    grid-template-areas:
+        'header header'
+        'shipping-address-label .'
+        'shipping-address checkout-form'
+        'shipping-address order-label'
+        'shipping-address products';
+
+    margin-bottom: 1rem;
+
+    & > h2 {
+        grid-area: header;
+        margin: 3rem 0 2rem;
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: #2e425a;
+        border: 2px solid #e3f4fd;
+        background-color: #f7fcff;
+        padding: 0.8rem 1.2rem;
+        border-radius: 4px;
+        line-height: 1.5;
+    }
+
+    & > label {
+        font-size: 0.9rem;
+        margin-bottom: 0.2rem;
+        margin-left: 0.2rem;
+        color: #4a617c;
+    }
+
+    & > .shippingAddressLabel {
+        grid-area: shipping-address-label;
+    }
+
+    & > div {
+        grid-area: shipping-address;
+        border-radius: 4px;
+        border: 2px solid #e3f4fd;
+        background-color: #f7fcff;
+    }
+
+    & > .orderLabel {
+        grid-area: order-label;
+        margin-top: 2rem;
+    }
+
+    & > ul {
+        grid-area: products;
+        color: #2e425a;
+        border: 1px solid #e3f4fd;
+        border-radius: 4px;
+
+        & > li:first-of-type {
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+        }
+
+        & > li:nth-child(odd) {
+            background-color: #f7fcff;
+        }
+
+        & > .total {
+            padding: 1rem;
+            border: 1px solid #e3f4fd;
+
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            background-color: #f7fcff;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            & > span {
+                font-weight: 500;
+            }
+        }
+    }
 }
