[UPDATE] added shipping price

--- a/src/components/Products/ProductCard/CheckoutProductCard/CheckoutProductCard.module.scss
+++ b/src/components/Products/ProductCard/CheckoutProductCard/CheckoutProductCard.module.scss
@@ -20,9 +20,10 @@
     }
 
     & > a {
-        font-size: 0.85rem;
+        font-size: 0.9rem;
         color: #2d86ff;
         padding: 0 0.75rem;
+        flex-grow: 1;
     }
     & > h4 {
         color: #2e425a;
