--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -59,6 +59,11 @@
             border-top-right-radius: 4px;
         }
 
+        & > li:last-of-type {
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+        }
+
         & > li:nth-child(odd) {
             background-color: #f7fcff;
         }
@@ -67,8 +72,6 @@
             padding: 1rem;
             border: 1px solid #e3f4fd;
 
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
             background-color: #f7fcff;
             display: flex;
             align-items: center;
@@ -76,6 +79,7 @@
 
             & > span {
                 font-weight: 500;
+                flex-grow: 1;
             }
         }
     }
