--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -6,9 +6,7 @@
     grid-template-areas:
         'header header'
         'shipping-address-label .'
-        'shipping-address checkout-form'
-        'shipping-address order-label'
-        'shipping-address products';
+        'shipping-address side';
 
     margin-bottom: 1rem;
 
@@ -38,48 +36,91 @@
 
     & > div {
         grid-area: shipping-address;
+        display: flex;
+        flex-direction: column;
         border-radius: 4px;
         border: 2px solid #e3f4fd;
         background-color: #f7fcff;
+        padding: 1rem 2rem 2rem;
+
+        & > label {
+            margin-top: 1rem;
+        }
+
+        & > input {
+            width: fit-content;
+        }
+
+        & > input:last-of-type {
+            max-width: 32rem;
+            width: 100%;
+        }
+
+        & > textarea {
+            max-width: 32rem;
+            width: 100%;
+            min-height: 5rem;
+            padding: 0.6rem;
+            font-size: 1rem;
+            border: 1px solid #c8dce6;
+            color: #18293c;
+            border-radius: 4px;
+            resize: vertical;
+            flex-grow: 1;
+
+            &:focus {
+                border-color: #6ea7ec;
+                box-shadow: 0 0 0 1px #6ea7ec;
+            }
+        }
     }
 
-    & > .orderLabel {
-        grid-area: order-label;
-        margin-top: 2rem;
-    }
+    & > section {
+        grid-area: side;
 
-    & > ul {
-        grid-area: products;
-        color: #2e425a;
-        border: 1px solid #e3f4fd;
-        border-radius: 4px;
-
-        & > li:first-of-type {
-            border-top-left-radius: 4px;
-            border-top-right-radius: 4px;
+        & > .orderLabel {
+            grid-area: order-label;
+            margin-top: 2rem;
+            font-size: 0.9rem;
+            margin-bottom: 0.2rem;
+            margin-left: 0.2rem;
+            color: #4a617c;
         }
 
-        & > li:last-of-type {
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
-        }
-
-        & > li:nth-child(odd) {
-            background-color: #f7fcff;
-        }
-
-        & > .total {
-            padding: 1rem;
+        & > ul {
+            grid-area: products;
+            color: #2e425a;
             border: 1px solid #e3f4fd;
+            border-radius: 4px;
 
-            background-color: #f7fcff;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+            & > li:first-of-type {
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+            }
 
-            & > span {
-                font-weight: 500;
-                flex-grow: 1;
+            & > li:last-of-type {
+                border-bottom-left-radius: 4px;
+                border-bottom-right-radius: 4px;
+            }
+
+            & > li:nth-child(odd) {
+                background-color: #f7fcff;
+            }
+
+            & > .total {
+                padding: 1rem;
+                border: 1px solid #e3f4fd;
+
+                background-color: #f7fcff;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                & > span {
+                    font-weight: 500;
+                    font-size: 0.95rem;
+                    flex-grow: 1;
+                }
             }
         }
     }
