--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,8 @@ body {
 *,
 *::before,
 *::after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -22,7 +24,8 @@ body {
 }
 
 input:focus,
-textarea:focus {
+textarea:focus,
+select:focus {
     outline-color: rgba(0, 0, 0, 0.1);
 }
 
