[UPDATE] adding computers to cart

--- a/src/index.scss
+++ b/src/index.scss
@@ -60,6 +60,7 @@ button {
     border: 1px solid #c8dce6;
     border-radius: 4px;
     padding: 0.6rem;
+    background-color: white;
 
     &--focus {
         border-color: #6ea7ec;
