--- a/src/components/Products/ProductCard/BuilderProductCard/BuilderProductCard.module.scss
+++ b/src/components/Products/ProductCard/BuilderProductCard/BuilderProductCard.module.scss
@@ -1,40 +1,37 @@
 .root {
     width: 100%;
-    height: 8rem;
+    height: 4rem;
     border: 1px solid #e3f4fd;
     background-color: #f7fcff;
     margin: 0;
     border-radius: 4px;
     display: flex;
     align-items: center;
-    padding: 0.5rem;
     font-size: 0.95rem;
 
     & > img {
         max-width: 40%;
-        max-height: 7rem;
+        max-height: 3rem;
         object-fit: cover;
     }
 
     & > div {
         display: flex;
-        flex-flow: column;
-        justify-content: flex-end;
         padding: 0.5rem;
+        align-items: center;
+        justify-content: space-between;
         flex-grow: 1;
         height: 100%;
 
         & > p {
             font-weight: 500;
             color: #2d86ff;
-            flex-grow: 0.9;
-            text-align: start;
         }
 
         & > h3 {
             color: #2e425a;
-            align-self: flex-end;
             margin-right: 0.2rem;
+            font-size: 1rem;
         }
     }
 }
