--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -34,6 +34,7 @@
         border: 2px solid #e3f4fd;
         background-color: #f7fcff;
         padding: 1rem 2rem 2rem;
+        height: fit-content;
 
         & > label {
             margin-top: 1rem;
@@ -59,6 +60,26 @@
             border-radius: 4px;
             resize: vertical;
             flex-grow: 1;
+
+            &:focus {
+                border-color: #6ea7ec;
+                box-shadow: 0 0 0 1px #6ea7ec;
+            }
+        }
+
+        & > select {
+            max-width: 15.5rem;
+            width: 100%;
+            padding: 0.6rem;
+            font-size: 1rem;
+            background-color: white;
+            border: 1px solid #c8dce6;
+            color: #18293c !important;
+            border-radius: 4px;
+
+            &::placeholder {
+                font-size: 0.5rem;
+            }
 
             &:focus {
                 border-color: #6ea7ec;
