Up rendering filter for price

--- a/src/components/Products/ProductFilters/ProductFilters.module.scss
+++ b/src/components/Products/ProductFilters/ProductFilters.module.scss
@@ -2,6 +2,7 @@
     grid-area: filters;
     & > ul {
         & > li {
+            margin-bottom: 1.25rem;
             & > ul {
                 & > li {
                     padding: 0.1rem;
