UP filtering by price

--- a/src/components/Products/ProductCard/CartProductCard/CartProductCard.module.scss
+++ b/src/components/Products/ProductCard/CartProductCard/CartProductCard.module.scss
@@ -27,6 +27,14 @@
         padding: 0 0.75rem;
         flex-grow: 1;
     }
+
+    & > p {
+        font-size: 0.9rem;
+        color: #2e425a;
+        padding: 0 0.75rem;
+        flex-grow: 1;
+    }
+
     & > div {
         display: flex;
         align-items: center;
