--- a/src/components/Products/ProductFilters/PriceFilter/PriceFilter.module.scss
+++ b/src/components/Products/ProductFilters/PriceFilter/PriceFilter.module.scss
@@ -1,15 +1,15 @@
 .root {
-    padding: 0.75rem 0.5rem 0.4rem 1rem;
+    padding: 0.75rem 0 0.4rem 0;
     border: 2px solid #e3f4fd;
     background-color: #f7fcff;
     border-radius: 4px;
 
-    & > div {
+    & > div:first-of-type {
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin-bottom: 0.25rem;
-
+        padding: 0 0 0 1rem;
         & > p {
             color: #2e425a;
             font-size: 0.9rem;
@@ -18,7 +18,7 @@
 
         & > button {
             border: none;
-            padding: 0 0.5rem;
+            padding: 0 1rem;
             margin: 0;
             background-color: transparent;
 
@@ -31,22 +31,12 @@
         }
     }
 
-    & > ul {
-        transition: 1s;
-        margin: 0;
-        margin-left: 0.75rem;
-        padding: 0.25rem;
-
-        & > label {
-            display: flex;
-            align-items: center;
-
-            & > span {
-                color: #2e425a;
-                font-size: 0.9rem;
-                font-weight: 600;
-                // white-space: nowrap;
-            }
-        }
+    & > .Content {
+        padding: 1rem 1rem 0.75rem 1rem;
     }
+}
+
+.Slider {
+    box-sizing: border-box;
+    margin-bottom: 0.3rem;
 }
