--- a/src/components/Builder/SelectComponent/SelectComponent.module.scss
+++ b/src/components/Builder/SelectComponent/SelectComponent.module.scss
@@ -1,21 +1,3 @@
 .root {
-    & > select {
-        max-width: 30rem;
-        width: 100%;
-        padding: 0.6rem;
-        font-size: 1rem;
-        background-color: white;
-        border: 1px solid #c8dce6;
-        color: #18293c;
-        border-radius: 4px;
-
-        &::placeholder {
-            font-size: 0.5rem;
-        }
-
-        &:focus {
-            border-color: #6ea7ec;
-            box-shadow: 0 0 0 1px #6ea7ec;
-        }
-    }
+    margin-top: 1rem;
 }
