--- a/src/components/Products/ProductCard/CartProductCard/CartProductCard.module.scss
+++ b/src/components/Products/ProductCard/CartProductCard/CartProductCard.module.scss
@@ -7,32 +7,35 @@
     background-color: #f7fcff;
     border-radius: 4px;
 
-    & > img {
-        display: block;
-        width: 5rem;
-        height: 4rem;
-        object-fit: cover;
-    }
-
-    & > span {
-        white-space: nowrap;
-        margin-left: 0.5rem;
-        font-size: 0.9rem;
-        font-weight: 500;
-    }
-
-    & > a {
-        font-size: 0.9rem;
-        color: #2d86ff;
-        padding: 0 0.75rem;
+    & > .main {
         flex-grow: 1;
-    }
 
-    & > p {
-        font-size: 0.9rem;
-        color: #2e425a;
-        padding: 0 0.75rem;
-        flex-grow: 1;
+        & > img {
+            display: block;
+            width: 5rem;
+            height: 4rem;
+            object-fit: cover;
+        }
+
+        & > span {
+            white-space: nowrap;
+            margin-left: 0.5rem;
+            font-size: 0.9rem;
+            font-weight: 500;
+        }
+
+        & > a {
+            font-size: 0.9rem;
+            color: #2d86ff;
+            padding: 0 0.75rem;
+        }
+
+        & > p {
+            font-size: 0.9rem;
+            color: #2e425a;
+            padding: 0 0.75rem;
+            font-weight: 500;
+        }
     }
 
     & > div {
@@ -78,7 +81,7 @@
 
 @media (max-width: 550px) {
     .root {
-        flex-wrap: wrap;
+        flex-direction: column;
         max-height: 11rem;
         height: fit-content;
         width: 100%;
