--- a/src/components/Products/ProductList/ProductList.module.scss
+++ b/src/components/Products/ProductList/ProductList.module.scss
@@ -7,6 +7,7 @@
     justify-items: center;
     row-gap: 1rem;
     column-gap: 0.5rem;
+    height: fit-content;
 
     & > li {
         width: 100%;
