--- a/src/components/Products/ProductFilters/PriceFilter/PriceFilter.module.scss
+++ b/src/components/Products/ProductFilters/PriceFilter/PriceFilter.module.scss
@@ -46,6 +46,6 @@
     box-sizing: border-box;
     margin-bottom: 0.5rem;
 
-    width: 90%;
+    width: 90% !important;
     margin: 0 auto !important;
 }
