--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,12 +1,10 @@
 .root {
-    max-width: 1432px;
-    padding: 6rem 3.5rem 1rem;
-    width: 100%;
-    margin: auto;
+    padding-top: 6rem;
+    padding-bottom: 1rem;
 }
 
 @media (max-width: 950px) {
     .root {
-        padding: 5rem 1rem 1rem;
+        padding-top: 5rem;
     }
 }
