--- a/src/components/Layout/NavBar/NavBar.module.scss
+++ b/src/components/Layout/NavBar/NavBar.module.scss
@@ -1,125 +1,53 @@
 .root {
-    width: 100%;
-    height: 4rem;
     display: flex;
-    flex-flow: column;
-    padding-top: 2px;
-    z-index: 700;
-    background-color: white;
-    position: fixed;
+    flex-direction: column;
+    justify-content: center;
+    height: 4rem;
 
-    & > li {
-        margin-left: 1.5rem;
+    & > nav {
+        margin-top: 2px !important;
 
-        &:first-of-type {
-            margin-left: 0;
+        & > :first-child {
+            margin-left: -12px;
+        }
+
+        & > :last-child {
+            margin-right: -12px;
         }
     }
 
     & .burger {
-        border: none;
-        background-color: transparent;
-        color: #2e425a;
-        padding: 0;
+        color: white;
 
         & svg {
-            font-size: 1.3rem;
+            font-size: 1.5rem;
         }
     }
 
-    &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 2px;
-        background-color: #00baf2;
-        background-image: linear-gradient(
-            to right,
-            #00baf2 0%,
-            #52b415 12%,
-            #ced512 25%,
-            #e30ca9 37%,
-            #00baf2 50%,
-            #52b415 63%,
-            #ced512 76%,
-            #e30ca9 87%,
-            #00baf2 100%
-        );
-        background-repeat: repeat-x;
-        background-position: 0 0;
-        background-size: 268% 100%;
-    }
-
     & nav {
-        background-color: white;
-        max-width: 1432px;
-        width: 100%;
-        margin: auto;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 2.5rem 0 3.5rem;
-        height: 100%;
 
         & > ul {
             display: flex;
             align-items: center;
         }
-
-        & > ul > li > a {
-            font-weight: 500;
-            height: 100%;
-            color: #2e425a;
-        }
     }
 }
 
-@media (max-width: 950px) {
-    .root {
-        & nav {
-            padding: 0 0.5rem 0 1rem;
-        }
-    }
-}
 @media (max-width: 580px) {
     .root {
         & nav {
             justify-content: flex-start;
+
+            & > :last-child {
+                margin-right: 0;
+            }
         }
 
         & .burger {
-            margin-right: 1rem;
+            margin-right: 0.5rem;
         }
     }
-}
-
-.cartContainer {
-    margin-right: 0.5rem;
-
-    & > a > svg {
-        font-size: 1.2rem;
-    }
-}
-
-.cart {
-    position: relative;
-    & > span {
-        position: absolute;
-        text-align: center;
-        padding-top: 0.15rem;
-        padding-left: 0.03rem;
-        width: 1rem;
-        height: 1rem;
-        border-radius: 50%;
-        background-color: red;
-        color: white;
-        font-size: 0.65rem;
-        display: block;
-        bottom: 65%;
-        left: 70%;
-    }
-}
-
-.signIn {
-    padding: 1rem;
 }
