--- a/src/components/Layout/SideDrawer/SideDrawer.module.scss
+++ b/src/components/Layout/SideDrawer/SideDrawer.module.scss
@@ -1,99 +1,22 @@
 .root {
-    position: fixed;
-    top: 0;
-    left: 0;
-    max-width: 20rem;
-    width: 80%;
-    height: 100%;
-    border: 2px solid #e3f4fd;
-    background-color: white;
+    width: 100%;
+
     padding: 1rem;
-    transition: 0.2s;
-    z-index: 1000;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
 
-    & > a,
-    & svg,
-    & > h3,
-    & > label,
-    & > ul a,
-    & > ul button {
-        color: #2e425a;
+    & > div:first-of-type {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
-    & > a {
-        font-weight: 700;
-        text-decoration: none;
-        font-size: 1.2rem;
-    }
-
-    & > button {
-        font-size: 1.4rem;
-        float: right;
-        padding: 0;
-    }
-
-    & > label {
-        font-weight: 500;
-        font-size: 0.8rem;
-        display: block;
-        margin-bottom: 0.25rem;
-
-        &:first-of-type {
-            margin-top: 1.5rem;
-        }
-    }
-
-    & > ul {
-        border: 2px solid #d6e9f3;
-        background-color: #f7fcff;
-        border-radius: 4px;
+    & > div {
+        width: 250px;
         margin-bottom: 1rem;
-
-        &:last-of-type {
-            margin: 0;
-        }
-
-        & > li {
-            flex-grow: 1;
-            height: min-content;
-            margin: 0;
-            width: 100%;
-            white-space: nowrap;
-            position: relative;
-            border-radius: 4px;
-
-            &:hover {
-                background-color: #e3f4fd;
-            }
-
-            &:first-of-type {
-                padding-top: 0.15rem;
-            }
-
-            &:last-of-type {
-                padding-bottom: 0.15rem;
-            }
-
-            & > button,
-            & > a {
-                padding: 0.6rem 1.25rem;
-                height: 100%;
-                font-size: 0.9rem;
-                font-weight: 500;
-            }
-
-            & > button {
-                display: flex;
-                align-items: center;
-            }
-        }
     }
 }
 
-.open {
-    transform: translate(-100%);
+.close {
+    font-size: 1.3rem;
 }
 
 @media (max-height: 655px) {
