--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ body {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -71,4 +71,8 @@ button {
         border-color: red;
         box-shadow: 0 0 0 0;
     }
+}
+
+.MuiButton-text {
+    padding: 6px 16px !important;
 }
