--- a/src/components/UI/Search/NotFound/NotFound.module.scss
+++ b/src/components/UI/Search/NotFound/NotFound.module.scss
@@ -1,27 +1,7 @@
 .root {
-    width: 100%;
-    height: 3rem;
-    margin: 0;
-    border: 1px solid #e3f4fd;
-    background-color: #f7fcff;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-bottom: 1rem !important;
 
-    & p {
-        color: #2e425a;
-        font-weight: 500;
-        font-size: 0.9rem;
-    }
-}
-
-@media (max-width: 390px) {
-    .root {
-        width: 16rem;
-
-        & p {
-            font-size: 0.8rem;
-        }
+    & > p {
+        text-align: center;
     }
 }
