--- a/src/components/UI/Search/SearchInput.module.scss
+++ b/src/components/UI/Search/SearchInput.module.scss
@@ -45,21 +45,10 @@
 }
 
 .allProducts {
-    height: 2.5rem;
-    margin: 0;
-    border: 1px solid #e3f4fd;
-    background-color: #f7fcff;
+    padding: 0.75rem !important;
 
-    border-radius: 4px;
-
-    & a {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 0.9rem;
-        font-weight: 500;
-        height: 100%;
-        color: #2e425a;
+    & > a {
+        text-align: center;
     }
 }
 
