--- a/src/components/Products/ProductCard/MobileProductCard/MobileProductCard.module.scss
+++ b/src/components/Products/ProductCard/MobileProductCard/MobileProductCard.module.scss
@@ -25,6 +25,7 @@
             & > h6 {
                 align-self: flex-end;
                 margin-right: 0.2rem;
+                font-size: 1.2rem !important;
             }
         }
     }
