--- a/src/components/UI/Header/Header.module.scss
+++ b/src/components/UI/Header/Header.module.scss
@@ -1,33 +1,30 @@
 .root {
+    grid-area: header !important;
     margin: 2rem 0;
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: #2e425a;
-    border: 2px solid #e3f4fd;
-    background-color: #f7fcff;
-    padding: 0.8rem 1.2rem;
-    border-radius: 4px;
-    line-height: 1.5;
 
-    &::first-letter {
-        text-transform: capitalize;
-    }
+    & > div {
+        display: flex;
+        align-items: center;
 
-    & > span {
-        color: #9fa8b7;
-        text-align: center;
-    }
-}
+        padding: 1rem !important;
 
-@media (max-width: 950px) {
-    .heading {
-        font-size: 1.4rem;
+        & > h6 {
+            margin-top: 0.1rem;
+
+            &::first-letter {
+                text-transform: capitalize;
+            }
+        }
+
+        & > p {
+            margin-top: 0.3rem;
+            margin-left: 0.25rem;
+        }
     }
 }
 
 @media (max-width: 540px) {
     .root {
         margin: 0;
-        font-size: 1.2rem;
     }
 }
