--- a/src/components/UI/Loader/Loader.module.scss
+++ b/src/components/UI/Loader/Loader.module.scss
@@ -1,45 +1,8 @@
 .root {
-    margin: 60px auto;
-    font-size: 10px;
-    position: relative;
-    text-indent: -9999em;
-    border-top: 0.5rem solid rgba(255, 255, 255, 0.2);
-    border-right: 0.5rem solid rgba(255, 255, 255, 0.2);
-    border-bottom: 0.4rem solid #2e425a;
-    border-left: 0.5rem solid #ffffff;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-animation: load8 1.2s infinite linear;
-    animation: load8 1.2s infinite linear;
-    border-radius: 50%;
-    width: 6em;
-    height: 6em;
-    z-index: 600;
-
-    &::after {
-        border-radius: 50%;
-        width: 6em;
-        height: 6em;
-    }
-}
-@-webkit-keyframes load8 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-@keyframes load8 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    top: 0;
+    bottom: 0;
 }
