--- a/src/pages/SearchResult/SearchResult.module.scss
+++ b/src/pages/SearchResult/SearchResult.module.scss
@@ -9,12 +9,11 @@
 
     margin-bottom: 1rem;
 
-    & > h3 {
-        grid-area: header;
+    & > div:first-of-type {
         margin: 1rem 0;
     }
 
-    & > div {
+    & > div:last-of-type {
         grid-area: content;
     }
 }
